clipPath fixed

--- a/app/styles/parallax.module.css
+++ b/app/styles/parallax.module.css
@@ -18,40 +18,7 @@
     height: 100%;
    
   }
-  /* .textImage{
-    position: absolute;
-    top: 50%;
-    left: 100px;
-    width: 300px;
-    text-align: left;
-    padding: 0;
-    color: #eee;
-    transform: translate(0, -50%);
- }
- .textImage .name {
-  font-size: 50px;
-  font-weight: bold;
-  opacity: 0;
-  animation: showcontent 1s ease-in-out 1 forwards;
-}
-.textImage .desc {
-  font-size: 13px;
-  margin: 20px 0;
-  opacity: 0;
-  animation: showcontent 1s ease-in-out 0.3s 1 forwards;
-}
-@keyframes showcontent {
-  from {
-    opacity: 0;
-    transform: translate(0, 100px);
-    filter: blur(33px);
-  }
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
-    filter: blur(0);
-  }
-} */
+  
   .triangel {
     width: 100%;
     height: 45vh;
@@ -67,8 +34,7 @@
     width: 100%;
     height: 100%;
     background-color: #0F1829;
-    /* background-image:url("/assets/images/parallax/triangel6.avif"); ; */
-    clip-path: polygon(41% 27%, 100% 0, 100% 71%, 100% 100%, 51% 100%, 0 100%, 0 100%, 0 100%, 0 46%, 0 47%);
+    clip-path: polygon(0 17%, 100% 0, 100% 35%, 100% 100%, 75% 100%, 44% 100%, 0 100%, 0% 70%, 0% 35%, 0 89%);
   }
  
   .content {
